Update broken links

--- a/content/post/2015/2015-10-06-outlook.md
+++ b/content/post/2015/2015-10-06-outlook.md
@@ -8,7 +8,7 @@ tags:
 title: Automatically Decline and Delete or Accept and Delete Outlook 2010 Meetings
 ---
 
-You can follow the [Microsoft TechNet guide to add VisualBasic code in Outlook rules](http://blogs.technet.com/b/sharepoint_republic/archive/2011/12/09/outlook-rule-to-auto-accept-or-auto-decline-meeting-invites.aspx).
+You can follow the [Microsoft TechNet guide to add VisualBasic code in Outlook rules](https://web.archive.org/web/20151016112956/http://blogs.technet.com/b/sharepoint_republic/archive/2011/12/09/outlook-rule-to-auto-accept-or-auto-decline-meeting-invites.aspx).
 
 You can just replace the code they give with this:
 
@@ -55,4 +55,4 @@ End Sub
 
 ```
 
-For anything else you may want to do with the meeting, check the [Outlook Visual Basic Developer Docs](https://msdn.microsoft.com/EN-US/library/office/dn320338.aspx).
+For anything else you may want to do with the meeting, check the [Outlook Visual Basic Developer Docs](https://docs.microsoft.com/en-us/previous-versions/office/dn320338(v=office.15)).
