--- a/content/post/2022/2022-11-25-bank-xls.md
+++ b/content/post/2022/2022-11-25-bank-xls.md
@@ -16,7 +16,7 @@ I've written previously on importing transactions to hledger/[ledger][] from [KB
 
 Both approaches are valid - but suffer from the same issues: any change the bank makes to it website needs to be updated in the code. The KBC/JavaScript approach was a bit more robust in that it would just search for rows on a website and download as CSV.
 
-With the EU payment services directive (PSD2) - banks have had to add two-factor authentication which hampers using an automated approach to log in and download. I've updated my original PTSB script to handle 2FA - buit it's taken the magic out of it and made it feel very manual. So I've decided to change the approach again - just download the Excel transaction file the provide and convert to CSV. It should be much easier to maintain - I just need to bbe careful of which row transactions start/end and which columns to ignore.
+With the EU payment services directive (PSD2) - banks have had to add two-factor authentication which hampers using an automated approach to log in and download. I've updated my original PTSB script to handle 2FA - buit it's taken the magic out of it and made it feel very manual. So I've decided to change the approach again - just download the Excel transaction file the provide and convert to CSV. It should be much easier to maintain - I just need to be careful of which row transactions start/end and which columns to ignore.
 
 
 Here's my latest Python script to convert Permanent TSB Excel file to CSV:
