--- a/content/post/2020/2020-05-22-ubnt-sonos.org
+++ b/content/post/2020/2020-05-22-ubnt-sonos.org
@@ -5,9 +5,11 @@
 #+TITLE: Ubiquiti Unifi with Sonos on a separate VLAN
 #+LANGUAGE: en
 
-*Update 2023*: _these instructions are *out-of-date* for the latest Unifi controller software versions_. It's preserved here as written for those who still have older versions. This post uses a file called `gateway.config.json` and [Unifi now say](https://help.ui.com/hc/en-us/articles/215458888-UniFi-USG-Advanced-Configuration-Using-config-gateway-json):
+*Update 2023*: _these instructions are *out-of-date* for the latest Unifi controller software versions_. It's preserved here as written for those who still have older versions. This post uses a file called `gateway.config.json` and [[https://help.ui.com/hc/en-us/articles/215458888-UniFi-USG-Advanced-Configuration-Using-config-gateway-json][Unifi now say]]:
 
-> This article is not applicable to the UniFi Dream Machine models, because all configurations are already available in the UniFi Network user interface.
+#+BEGIN_QUOTE
+This article is not applicable to the UniFi Dream Machine models, because all configurations are already available in the UniFi Network user interface.
+#+END_QUOTE
 
 So I take that to mean use of this file is depracated and it should be possible to do this via the administration webpage.
 
