Formatted markdown & added prettier to flake

--- a/content/post/2024/2024-10-20-mini-k8s.md
+++ b/content/post/2024/2024-10-20-mini-k8s.md
@@ -1,5 +1,5 @@
 ---
-title: "Mini Kubernetes Cluster"
+title: 'Mini Kubernetes Cluster'
 slug: mini-k8s
 date: 2024-10-20
 draft: true # TODO: un-draft to publish this
@@ -10,4 +10,3 @@ tags:
 TODO
 
 <!--more-->
-
