--- a/content/post/2024/2024-10-20-picade.md
+++ b/content/post/2024/2024-10-20-picade.md
@@ -1,5 +1,5 @@
 ---
-title: "Picade"
+title: 'Picade'
 slug: picade
 date: 2024-10-20
 draft: true # TODO: un-draft to publish this
@@ -11,4 +11,3 @@ tags:
 TODO
 
 <!--more-->
-
