Update picade post

--- a/content/post/2025/2025-01-19-picade.md
+++ b/content/post/2025/2025-01-19-picade.md
@@ -25,12 +25,12 @@ The main pieces are:
 The instructions are very well written and clear. All the parts are well packed. The only parts I felt were fiddly were the plastic hinges for the cabinet (you need to get your hands in to tight spaces to tie down the screws) and the button  order. It's easy to mix up which button is connected where - so with this and installing the joystick/top plate the joystick attaches to I would take your time.
 
 Frustrations I had:
-* Picade is not plug and play - I had various issues controlling sound
+* [RetroPie](https://retropie.org.uk/) (the linux distribution) is not plug and play - I had various issues controlling sound
 * Not clear to me how the consoles appear (turns out games working with emulators have file extensions, Picade picks this up and will know to launch .snes with SNES)
-* Loading games on was tedious until I installed and shared games directory with [Samba]()https://www.samba.org/
+* Loading games on was tedious until I installed and shared games directory with [Samba](https://www.samba.org/)
 * Mapping buttons for so many different emulators and systems is a nightmare - I was hoping someone would have just put in sensible defaults!
 
-I ordered the [fancy illuminated buttons](https://shop.pimoroni.com/products/picade-plasma-kit-illuminated-arcade-buttons) after because for me, this is partly about playing and partly about a really nice object to talk about.
+Later, I ordered the [fancy illuminated buttons](https://shop.pimoroni.com/products/picade-plasma-kit-illuminated-arcade-buttons) after because for me, this is partly about playing and partly about a really nice object to talk about.
 
 Overall this was a super fun project and getting to play some great games at the end was rewarding!!
 
